@@ -22,6 +22,9 @@
 ?>
 <?php
 
+    // allow seo rewriters to fiddle with the request
+    $_zm_request->seoDecode();
+
     // mvc mappings
     ZMUrlManager::instance()->load(file_get_contents(ZMFileUtils::mkPath(array(ZMRuntime::getApplicationPath(), 'config', 'url_mappings.yaml'))), false);
     ZMSacsManager::instance()->load(file_get_contents(ZMFileUtils::mkPath(array(ZMRuntime::getApplicationPath(), 'config', 'sacs_mappings.yaml'))), false);
@@ -36,5 +39,3 @@
     ZMDispatcher::dispatch($_zm_request);
     $_zm_request->closeSession();
     exit;
-
-?>
